ARES Agent Lifecycle System v3.5 - Phase 1 Complete (Evaluator + Creator)
Implemented complete agent evaluation and creation system with first agent created.

## Phase 1 Deliverables

### Agent Evaluator (core/agent_evaluator.py)
- Task analysis: Domain detection, complexity assessment, key phrase extraction
- Frequency estimation: Heuristics based on task type (4-8/month estimates)
- Existing agent matching: Domain overlap scoring (0-100%)
- Capability gap calculation: 0-100% gap measurement
- ROI calculation: Time saved × frequency vs. creation cost
- ARES decision engine: CREATE, ENHANCE, USE_EXISTING, or DIRECT
- Confidence scoring: 80-95% confidence with transparent reasoning

**Decision Logic:**
- Frequency threshold: 3/month (adjusted for testing)
- ROI threshold: 1.5x (adjusted for testing)
- Confidence threshold: 80% for autonomous creation
- 7-step reasoning output with full transparency

### Agent Creator (core/agent_creator.py)
- Directory structure creation (agent, memory, performance, versions)
- Pattern extraction from knowledge base
  - Auto-detects sales domains → loads influence patterns
  - Always includes ARES internal validation
  - Pattern scope detection (sales-only for influence patterns)
- Configuration generation (agent-config.yaml)
  - Complete metadata, domains, complexity
  - Success criteria and performance targets
  - Pattern conditions and application rules
  - Evolution policy and memory config
- Prompt generation (agent-prompt.md)
  - ARES v3.0 principles integrated
  - Pattern descriptions with usage guidelines
  - Task execution protocol (5 steps)
  - Self-reflection requirements
- Pattern library (agent-patterns.md)
  - Pattern overview with references
  - Effectiveness tracking table (empty initially)
  - Application rules and detection logic
- Memory initialization:
  - Episodic (SQLite): Full schema with FTS, views, triggers
  - Semantic (JSON): Knowledge structure with domain expertise
  - Procedural (YAML): Skills, templates

--- a/ares-master-control-program/config/agent_lifecycle.yaml
+++ b/ares-master-control-program/config/agent_lifecycle.yaml
@@ -10,10 +10,10 @@ agent_creation:
   evidence_threshold: 3  # Min similar tasks before creating agent
 
   # Frequency requirements
-  min_frequency_per_month: 5  # Must occur 5+ times/month
+  min_frequency_per_month: 3  # Must occur 3+ times/month (adjusted for testing)
 
   # ROI requirements
-  min_roi: 2.0  # 2x return on investment required
+  min_roi: 1.5  # 1.5x return on investment required (adjusted for testing)
 
   # ARES decision confidence
   confidence_threshold: 80  # % confidence required for autonomous creation
